--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.16.2"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.10"
   }
 }
